tests/paczka1/small_fuzzy/22762607.err
Error in line 1: HnQWUUZr A150 37,3
Error in line 3: HnQWUUZr S903 10,4
